--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -29,7 +29,7 @@
         <!-- Classy Menu -->
         <nav class="classy-navbar" id="essenceNav">
             <!-- Logo -->
-            <a href="/index" class="book_your_shelf_logo">
+            <a href="/" class="book_your_shelf_logo">
                 <img src="images/logo/book_your_shelf_logo.png" alt="">
             </a>
             <!-- Navbar Toggler -->
@@ -204,7 +204,7 @@
                     <a href="/login" style="line-height: 40px">Login</a>
                     <a href="/profile" style="line-height: 40px">Profile</a>
                     <a href="/admin-panel" style="line-height: 40px">Panel</a>
-                    <a href="/index" style="line-height: 40px">Logout</a>
+                    <a href="/" style="line-height: 40px">Logout</a>
                 </div>
             </div>
 
