--- a/src/main/resources/templates/user_details/_message.html
+++ b/src/main/resources/templates/user_details/_message.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 
-<form action="/user-details/message" th:object="${PersonalMessage}" class="form-contact form-review mt-3"
-      method="post">
+<form class="form-contact form-review mt-3" method="post" id="message_form">
     <div class="form-group">
-        <input class="form-control" name="subject" type="text"
-               placeholder="Enter Subject" required="" th:field="*{subject}">
+        <input class="form-control" id="subject_area" name="subject" type="text"
+               placeholder="Enter Subject" required="">
     </div>
     <div class="form-group">
                                 <textarea class="form-control different-control w-100" name="textarea"
@@ -40,33 +39,44 @@
 
 <script>
     $('#sms ,#mail ,#SmsAndMail').click(function (event) {
-        event.preventDefault();
+
         var subject = $('#subject_area').val();
-        var text = $('#textarea').val();
+        var messageContent = $('#textarea').val();
         var submit = $(this).attr("id");
 
         var ret = {
             subject: subject,
-            text: text,
+            messageContent: messageContent,
             submit: submit
         };
-
-        $.post("/user-details/message", ret, function (data) {
-            iziToast.show({
-                title: 'Success',
-                message: 'Message sent successfully.',
-                position: 'topRight',
-                color: 'green'
-            });
-            window.location.href = "/user-details#message";
-        }).fail(function (data) {
-            iziToast.show({
-                title: 'Fail',
-                message: data.responseText,
-                position: 'topRight',
-                color: 'red'
-            });
-        })
+        if (validation_check(["subject_area", "textarea"])) {
+            event.preventDefault();
+            $.post("/user-details/message", ret, function (data) {
+                iziToast.show({
+                    title: 'Success',
+                    message: 'Message sent successfully.',
+                    position: 'topRight',
+                    color: 'green'
+                });
+                $("#message_form")[0].reset();
+            }).fail(function (data) {
+                iziToast.show({
+                    title: 'Fail',
+                    message: data.responseText,
+                    position: 'topRight',
+                    color: 'red'
+                });
+            })
+        }
     });
+
+    function validation_check(arr) {
+        for (var i = 0; i < arr.length; i++) {
+            if (!document.getElementById(arr[i]).checkValidity()) {
+                return false;
+            }
+        }
+        return true;
+    }
 </script>
 </html>
