Remember me Checkobox checked removed

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -263,7 +263,7 @@
                                                     <label>
                                                         <label class="checkbox_container">
                                                             <input type="checkbox" id="remember"
-                                                                   class="billing_checkbox" checked="checked">
+                                                                   class="billing_checkbox" >
                                                             <span class="checkbox_mark"></span>
                                                         </label>
                                                         <label style="padding-left: 29px; cursor: text">
