--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -8,18 +8,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Little Closet template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="styles/bootstrap-4.1.2/bootstrap.min.css">
-    <link href="plugins/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" th:href="@{static/styles/bootstrap-4.1.2/bootstrap.min.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{static/plugins/font-awesome-4.7.0/css/font-awesome.min.css}">
     <!-- Favicon  -->
-    <link rel="icon" href="images/logo/book_your_shelf_tab.png">
-    <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/owl.carousel.css">
-    <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/owl.theme.default.css">
-    <link rel="stylesheet" type="text/css" href="plugins/OwlCarousel2-2.2.1/animate.css">
-    <link rel="stylesheet" type="text/css" href="styles/login.css">
-    <link rel="stylesheet" type="text/css" href="styles/responsive.css">
-    <link rel="stylesheet" type="text/css" href="styles/core-style.css">
-    <link rel="stylesheet" type="text/css" href="styles/util.css">
-    <link rel="stylesheet" type="text/css" href="styles/iziToast.min.css">
+    <link rel="icon" th:href="@{/static/images/logo/book_your_shelf_tab.png}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/plugins/OwlCarousel2-2.2.1/owl.carousel.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/plugins/OwlCarousel2-2.2.1/owl.theme.default.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/plugins/OwlCarousel2-2.2.1/animate.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/styles/login.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/styles/responsive.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/styles/core-style.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/styles/util.css}">
+    <link rel="stylesheet" type="text/css" th:href="@{/static/styles/iziToast.min.css}">
 </head>
 
 <body>
@@ -30,7 +30,7 @@
         <nav class="classy-navbar" id="essenceNav">
             <!-- Logo -->
             <a href="/" class="book_your_shelf_logo">
-                <img src="images/logo/book_your_shelf_logo.png" alt="">
+                <img th:src="@{static/images/logo/book_your_shelf_logo.png}" alt="">
             </a>
             <!-- Navbar Toggler -->
             <div class="classy-navbar-toggler">
@@ -81,7 +81,7 @@
                                     <li><a href="/category" class="nav-bar-text-overflow">Our Picks For You</a></li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
-                                    <img src="images/icons/01brownbookicon.jpg" alt="">
+                                    <img th:src="@{static/images/icons/01brownbookicon.jpg}" alt="">
                                 </div>
                             </div>
                         </li>
@@ -114,7 +114,7 @@
                                     <li><a href="/category" class="nav-bar-text-overflow">Our Picks For You</a></li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
-                                    <img src="images/icons/01brownebookicon.jpg" alt="">
+                                    <img th:src="@{static/images/icons/01brownebookicon.jpg}" alt="">
                                 </div>
                             </div>
                         </li>
@@ -150,7 +150,7 @@
                                     <li><a href="/category" class="nav-bar-text-overflow">Our Picks For You</a></li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
-                                    <img src="images/icons/01brownaudiobookicon.jpg" alt="">
+                                    <img th:src="@{static/images/icons/01brownaudiobookicon.jpg}" alt="">
                                 </div>
                             </div>
                         </li>
@@ -176,7 +176,7 @@
                                     <li><a href="/category" class="nav-bar-text-overflow">Our Picks For You</a></li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
-                                    <img src="images/icons/01brownebookicon.jpg" alt="">
+                                    <img th:src="@{static/images/icons/01brownebookicon.jpg}" alt="">
                                 </div>
                             </div>
                         </li>
@@ -198,7 +198,7 @@
 
             <!-- User Area -->
             <div class="user-button-dropdown user-login-info">
-                <a href=""><img src="images/core-img/user.svg" alt=""></a>
+                <a href=""><img th:src="@{static/images/core-img/user.svg}" alt=""></a>
                 <div class="user-button-dropdown-content">
                     <a href="/register" style="line-height: 40px">Register</a>
                     <a href="/login" style="line-height: 40px">Login</a>
@@ -210,12 +210,12 @@
 
             <!-- Favourite Area -->
             <div class="favourite-area">
-                <a href="/wish-list"><img src="images/core-img/heart.svg" alt=""></a>
+                <a href="/wish-list"><img th:src="@{static/images/core-img/heart.svg}" alt=""></a>
             </div>
 
             <!-- Cart Area -->
             <div class="cart-area">
-                <a href="/cart" id="essenceCartBtn"><img src="images/core-img/bag.svg" alt="">
+                <a href="/cart" id="essenceCartBtn"><img th:src="@{static/images/core-img/bag.svg}" alt="">
                     <span>3</span></a>
             </div>
         </div>
@@ -236,25 +236,32 @@
 
                             <div class="login_title">Register</div>
                             <div class="login_form_container">
-                                <form  th:object= "${user}" method="post" id="login_form" class="login_form" >
+                                <form th:object="${user}" th:action="@{/register}" method="post" id="login_form"
+                                      class="login_form">
                                     <div>
                                         <!-- Name -->
                                         <div class="login-text p-b-10" style="color: black;">Name</div>
-                                        <input type="text" th:field= "*{name}" id="register_name" class="login_input form-control" pattern= "^[a-zA-Z ]+$" required="required">
+                                        <input type="text" th:field="*{name}" th:value="${lastUser?.getName()}"
+                                               id="register_name" class="login_input form-control"
+                                               pattern="^[a-zA-Z ]+$" required="required">
 
                                     </div>
 
                                     <div>
                                         <!-- Surname -->
                                         <div class="login-text p-b-10" style="color: black;">Surname</div>
-                                        <input type="text" th:field= "*{surname}"  id="register_surname" class="login_input form-control" pattern= "^[a-zA-Z ]+$" required="required">
+                                        <input type="text" th:field="*{surname}" th:value="${lastUser?.getSurname()}"
+                                               id="register_surname" class="login_input form-control"
+                                               pattern="^[a-zA-Z ]+$" required="required">
 
                                     </div>
 
                                     <div>
                                         <!-- Email -->
                                         <div class="login-text p-b-10" style="color: black;">E-Mail Address</div>
-                                        <input type="email" th:field= "*{email}" id="register_email" class="login_input form-control" pattern = "[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required="required">
+                                        <input type="email" th:field="*{email}" th:value="${lastUser?.getEmail()}"
+                                               id="register_email" class="login_input form-control"
+                                               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$" required="required">
 
                                     </div>
                                     <div>
@@ -342,7 +349,8 @@
                             <div class="footer_about">
                                 <div class="footer_logo">
                                     <div class="d-flex flex-row align-items-center justify-content-center">
-                                        <img class="book_your_shelf_footer" src="images/logo/book_your_shelf_logo.png"
+                                        <img class="book_your_shelf_footer"
+                                             th:src="@{static/images/logo/book_your_shelf_logo.png}"
                                              alt="">
                                     </div>
                                 </div>
@@ -394,24 +402,24 @@
     </div>
 </div>
 
-<script src="js/jquery-3.2.1.min.js"></script>
-<script src="styles/bootstrap-4.1.2/popper.js"></script>
-<script src="styles/bootstrap-4.1.2/bootstrap.min.js"></script>
-<script src="js/plugins.js"></script>
-<script src="plugins/greensock/TweenMax.min.js"></script>
-<script src="plugins/greensock/TimelineMax.min.js"></script>
-<script src="plugins/scrollmagic/ScrollMagic.min.js"></script>
-<script src="plugins/greensock/animation.gsap.min.js"></script>
-<script src="plugins/greensock/ScrollToPlugin.min.js"></script>
-<script src="plugins/OwlCarousel2-2.2.1/owl.carousel.js"></script>
-<script src="plugins/easing/easing.js"></script>
-<script src="plugins/progressbar/progressbar.min.js"></script>
-<script src="plugins/parallax-js-master/parallax.min.js"></script>
-<script src="js/classy-nav.min.js"></script>
-<script src="js/custom.js"></script>
-<script src="js/active.js"></script>
-<script src="js/login.js"></script>
-<script src="js/iziToast.min.js"></script>
+<script th:src="@{static/js/jquery-3.2.1.min.js}"></script>
+<script th:src="@{static/styles/bootstrap-4.1.2/popper.js}"></script>
+<script th:src="@{static/styles/bootstrap-4.1.2/bootstrap.min.js}"></script>
+<script th:src="@{static/js/plugins.js}"></script>
+<script th:src="@{static/plugins/greensock/TweenMax.min.js}"></script>
+<script th:src="@{static/plugins/greensock/TimelineMax.min.js}"></script>
+<script th:src="@{static/plugins/scrollmagic/ScrollMagic.min.js}"></script>
+<script th:src="@{static/plugins/greensock/animation.gsap.min.js}"></script>
+<script th:src="@{static/plugins/greensock/ScrollToPlugin.min.js}"></script>
+<script th:src="@{static/plugins/OwlCarousel2-2.2.1/owl.carousel.js}"></script>
+<script th:src="@{static/plugins/easing/easing.js}"></script>
+<script th:src="@{static/plugins/progressbar/progressbar.min.js}"></script>
+<script th:src="@{static/plugins/parallax-js-master/parallax.min.js}"></script>
+<script th:src="@{static/js/classy-nav.min.js}"></script>
+<script th:src="@{static/js/custom.js}"></script>
+<script th:src="@{static/js/active.js}"></script>
+<script th:src="@{static/js/login.js}"></script>
+<script th:src="@{static/js/iziToast.min.js}"></script>
 
 <script>
     $('#register_button').click(function (event) {
