--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 
 <head>
     <title>Register | Book Your Shelf</title>
@@ -200,11 +200,17 @@
             <div class="user-button-dropdown user-login-info">
                 <a href=""><img th:src="@{static/images/core-img/user.svg}" alt=""></a>
                 <div class="user-button-dropdown-content">
-                    <a href="/register" style="line-height: 40px">Register</a>
-                    <a href="/login" style="line-height: 40px">Login</a>
-                    <a href="/profile" style="line-height: 40px">Profile</a>
-                    <a href="/admin-panel" style="line-height: 40px">Panel</a>
-                    <a href="/" style="line-height: 40px">Logout</a>
+                    <div sec:authorize="isAnonymous()">
+                        <a href="/register" style="line-height: 40px">Register</a>
+                        <a href="/login" style="line-height: 40px">Login</a>
+                    </div>
+                    <div sec:authorize="hasRole('ROLE_ADMIN')">
+                        <a href="/admin-panel" style="line-height: 40px">Panel</a>
+                    </div>
+                    <div sec:authorize="isAuthenticated()">
+                        <a href="/profile" style="line-height: 40px">Profile</a>
+                        <a href="/perform_logout" style="line-height: 40px">Logout</a>
+                    </div>
                 </div>
             </div>
 
