Fix login input password remember bug

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -255,7 +255,8 @@
                                         <div class="login-text p-b-10" style="color: black;">Password</div>
                                         <div class="input-group">
                                             <input type="password" th:field="*{password}" id="login_password"
-                                                   class="login_input form-control pwd" required="required">
+                                                   class="login_input form-control pwd" value="secret"
+                                                   required="required">
                                             <div class="input-group-append">
                                                 <span class="input-group-text show_password_bg">
                                                     <button class="btn btn-default reveal" type="button"><i
