--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -281,7 +281,7 @@
                                                     </label>
                                                 </div>
                                                 <div style="alignment: center">
-                                                    <a th:href="@{/forgot-password}" class="login-text register-text">Forgot
+                                                    <a href="/forgot-password" class="login-text register-text">Forgot
                                                         Password</a>
                                                 </div>
                                             </li>
