--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -48,36 +48,36 @@
                             <div class="megamenu">
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Categories</li>
-                                    <li><a href="/category" class="nav-bar-text-overflow">Literature</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Novel</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Children and Youth</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Literature</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Novel</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Children and Youth</a>
                                     </li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Science</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Comic Book</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Religion Sufism</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Course/Exam Books</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Philosophy</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Foreign Languages</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow" style="font-weight: bold">
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Science</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Comic Book</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Religion Sufism</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Course/Exam Books</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Philosophy</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Foreign Languages</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow" style="font-weight: bold">
                                         Book Cases
                                     </a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Campaigns</li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Literature Day</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Black Friday</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Home Reading Festival</a>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Literature Day</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Black Friday</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Home Reading Festival</a>
                                     </li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Up to 40% Discount at
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Up to 40% Discount at
                                         İşbank Cultural Publications & İşbank Science Publications</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">40% Discount on Bilgi
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">40% Discount on Bilgi
                                         Publishing House Classics</a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Hot Lists</li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Best Sellers</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Best Sellers</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">New Releases</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Our Picks For You</a></li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownbookicon.jpg}" alt="">
@@ -88,29 +88,29 @@
                             <div class="megamenu">
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Categories</li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Fiction and Literature</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Fiction and Literature</a>
                                     </li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Health and Care</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Literature and Writing</a>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Health and Care</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Literature and Writing</a>
                                     </li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Life Style</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Sports and Recreation</a>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Life Style</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Sports and Recreation</a>
                                     </li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Science Fiction and
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Science Fiction and
                                         Fantasy</a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Campaigns</li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Black Friday</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Sports Day</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">%40 Discount on Science
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Black Friday</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Sports Day</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">%40 Discount on Science
                                         Fiction and Fantasy</a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Hot Lists</li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Best Sellers</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a href="/category" class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Best Sellers</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">New Releases</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Our Picks For You</a></li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownebookicon.jpg}" alt="">
@@ -121,32 +121,32 @@
                             <div class="megamenu">
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Categories</li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Mystery and Suspicion</a>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Mystery and Suspicion</a>
                                     </li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Romance</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Literature</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Children and Youth</a>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Romance</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Literature</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Children and Youth</a>
                                     </li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Cartoons and Comics</a>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Cartoons and Comics</a>
                                     </li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Business and Finance</a>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Business and Finance</a>
                                     </li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Biography and Memory</a>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Biography and Memory</a>
                                     </li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Romantic</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Romantic</a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Campaigns</li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Black Friday</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Cartoons and Comics
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Black Friday</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Cartoons and Comics
                                         Day</a></li>
                                     <li><a href="/category"  class="nav-bar-text-overflow">%20 on Romantic</a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Hot Lists</li>
-                                    <li><a href="/category" class="nav-bar-text-overflow">Best Sellers</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}" class="nav-bar-text-overflow">Best Sellers</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">New Releases</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Our Picks For You</a></li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownaudiobookicon.jpg}" alt="">
@@ -157,22 +157,22 @@
                             <div class="megamenu">
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Categories</li>
-                                    <li><a href="/category" >Kobo</a></li>
-                                    <li><a href="/category" >Calibro</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow" style="font-weight: bold">
+                                    <li><a th:href="@{/category}" >Kobo</a></li>
+                                    <li><a th:href="@{/category}" >Calibro</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow" style="font-weight: bold">
                                         E-Book Reader Cases
                                     </a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Campaigns</li>
-                                    <li><a href="/category" >Black Friday</a></li>
-                                    <li><a href="/category" >E-Book Reader Day</a></li>
+                                    <li><a th:href="@{/category}" >Black Friday</a></li>
+                                    <li><a th:href="@{/category}" >E-Book Reader Day</a></li>
                                 </ul>
                                 <ul class="single-mega cn-col-4">
                                     <li class="title">Hot Lists</li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Best Sellers</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">New Releases</a></li>
-                                    <li><a href="/category"  class="nav-bar-text-overflow">Our Picks For You</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Best Sellers</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">New Releases</a></li>
+                                    <li><a th:href="@{/category}"  class="nav-bar-text-overflow">Our Picks For You</a></li>
                                 </ul>
                                 <div class="single-mega cn-col-4">
                                     <img th:src="@{/static/images/icons/01brownebookicon.jpg}" alt="">
@@ -199,22 +199,22 @@
             <div class="user-button-dropdown user-login-info">
                 <a href=""><img th:src="@{/static/images/core-img/user.svg}" alt=""></a>
                 <div class="user-button-dropdown-content">
-                    <a href="/register" style="line-height: 40px">Register</a>
-                    <a href="/login" style="line-height: 40px">Login</a>
-                    <a href="/profile" style="line-height: 40px">Profile</a>
-                    <a href="/admin-panel" style="line-height: 40px">Panel</a>
-                    <a href="/index" style="line-height: 40px">Logout</a>
+                    <a th:href="@{/register}" style="line-height: 40px">Register</a>
+                    <a th:href="@{/login}" style="line-height: 40px">Login</a>
+                    <a th:href="@{/profile}" style="line-height: 40px">Profile</a>
+                    <a th:href="@{/admin-panel}" style="line-height: 40px">Panel</a>
+                    <a th:href="@{/}" style="line-height: 40px">Logout</a>
                 </div>
             </div>
 
             <!-- Favourite Area -->
             <div class="favourite-area">
-                <a href="/wish-list"><img th:src="@{/static/images/core-img/heart.svg}" alt=""></a>
+                <a th:href="@{/wish-list}"><img th:src="@{/static/images/core-img/heart.svg}" alt=""></a>
             </div>
 
             <!-- Cart Area -->
             <div class="cart-area">
-                <a href="/cart" id="essenceCartBtn"><img th:src="@{/static/images/core-img/bag.svg}" alt="">
+                <a th:href="@{/cart}" id="essenceCartBtn"><img th:src="@{/static/images/core-img/bag.svg}" alt="">
                     <span>3</span></a>
             </div>
         </div>
@@ -279,7 +279,7 @@
                         <div class="col-lg-4 footer_col">
                             <ul class="footer_list">
                                 <li>
-                                    <a href="/membership" target="_blank">
+                                    <a th:href="@{/membership}" target="_blank">
                                         <div>Terms and Conditions</div>
                                     </a>
                                 </li>
@@ -355,7 +355,6 @@
                     position: 'topRight',
                     color: 'green'
                 });
-                window.location.href = "#forgot-password";
             }).fail(function (data) {
                 iziToast.show({
                     title: 'Fail',
