input fields cleared

--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -355,6 +355,7 @@
                     position: 'topRight',
                     color: 'green'
                 });
+                document.getElementById("login_form").reset();
             }).fail(function (data) {
                 iziToast.show({
                     title: 'Fail',
